--- a/public/index.html
+++ b/public/index.html
@@ -218,11 +218,11 @@
   </style>
 
 
-  <link rel="stylesheet" href="https://uatkd.ca/css/main.css" />
+  <link rel="stylesheet" href="https://ualberta-taekwondo-club.github.io/css/main.css" />
 
-  <link rel="stylesheet" href="https://uatkd.ca/css/rad-icons.css" />
+  <link rel="stylesheet" href="https://ualberta-taekwondo-club.github.io/css/rad-icons.css" />
 
-  <link rel="stylesheet" href="https://uatkd.ca/css/custom.css" />
+  <link rel="stylesheet" href="https://ualberta-taekwondo-club.github.io/css/custom.css" />
 
 
 
@@ -235,7 +235,7 @@
   <header class="header fixed-top rad-animation-group" id="header">
     <div class="container rad-fade-in">
       <nav class="navbar navbar-expand-lg navbar-light p-0">
-        <a class="navbar-brand" href="https://uatkd.ca">
+        <a class="navbar-brand" href="https://ualberta-taekwondo-club.github.io">
           <span>Andreas</span>
           <span>Ellure</span>
 
@@ -249,7 +249,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav ml-lg-auto">
             <li class="nav-item">
-              <a class="nav-link" href="https://uatkd.ca">HOME</a>
+              <a class="nav-link" href="https://ualberta-taekwondo-club.github.io">HOME</a>
             </li>
 
             <li class="nav-item">
@@ -277,8 +277,8 @@
     <div class="rad-showcase__bg">
       <img class="lozad img-responsive"
         src="data:image/gif;base64,R0lGODlhBwACAIAAAP///wAAACH5BAEAAAEALAAAAAAHAAIAAAIDjI9YADs="
-        data-src="https://uatkd.ca/img/showcase/showcase.png"
-        data-srcset="https://uatkd.ca/img/showcase/showcase.png 1x, https://uatkd.ca/img/showcase/showcase@2x.png 2x"
+        data-src="https://ualberta-taekwondo-club.github.io/img/showcase/showcase.png"
+        data-srcset="https://ualberta-taekwondo-club.github.io/img/showcase/showcase.png 1x, https://ualberta-taekwondo-club.github.io/img/showcase/showcase@2x.png 2x"
         alt="" />
     </div>
     <div class="container">
@@ -321,7 +321,7 @@
 
           <a href="https://www.facebook.com/raditycom/" target="_blank"><i class="icon-facebook-line"></i></a>
 
-          <a href="https://uatkd.ca" target="_blank"><i class="icon-codepen-line"></i></a>
+          <a href="https://ualberta-taekwondo-club.github.io" target="_blank"><i class="icon-codepen-line"></i></a>
 
           <a href="https://www.yelp.com/" target="_blank"><i class="icon-yelp-line"></i></a>
 
@@ -331,7 +331,7 @@
     <div class="rad-showcase__bg rad-showcase__bg--mobile">
       <img class="lozad img-responsive"
         src="data:image/gif;base64,R0lGODlhBwACAIAAAP///wAAACH5BAEAAAEALAAAAAAHAAIAAAIDjI9YADs="
-        data-src="https://uatkd.ca/img/showcase/showcase-mobile.jpg" alt="" />
+        data-src="https://ualberta-taekwondo-club.github.io/img/showcase/showcase-mobile.jpg" alt="" />
     </div>
   </section>
 
@@ -344,8 +344,8 @@
         <div class="about__profile-picture col-12 col-md-6">
           <img class="lozad img-responsive image-left-overflow"
             src="data:image/gif;base64,R0lGODlhBwACAIAAAP///wAAACH5BAEAAAEALAAAAAAHAAIAAAIDjI9YADs="
-            data-src="https://uatkd.ca/img/who-am-i/user-picture.png"
-            data-srcset="https://uatkd.ca/img/who-am-i/user-picture.png 1x, https://uatkd.ca/img/who-am-i/user-picture@2x.png 2x"
+            data-src="https://ualberta-taekwondo-club.github.io/img/who-am-i/user-picture.png"
+            data-srcset="https://ualberta-taekwondo-club.github.io/img/who-am-i/user-picture.png 1x, https://ualberta-taekwondo-club.github.io/img/who-am-i/user-picture@2x.png 2x"
             alt="Profile Picture" />
         </div>
         <div class="col-12 col-md-6 my-auto my-auto">
@@ -440,7 +440,7 @@
             <i class="icon-linkedin-fill"></i>
             Linkedin
             <i class="icon-arrow-right"></i></a>
-          <a href="https://uatkd.ca" class="btn btn-frameless" target="_blank">
+          <a href="https://ualberta-taekwondo-club.github.io" class="btn btn-frameless" target="_blank">
             <i class="icon-profile-fill"></i>
             Download My Resume
           </a>
@@ -465,8 +465,8 @@
               <a href="https://radity.com">
                 <img class="lozad img-responsive"
                   src="data:image/gif;base64,R0lGODlhBwACAIAAAP///wAAACH5BAEAAAEALAAAAAAHAAIAAAIDjI9YADs="
-                  data-src="https://uatkd.ca/img/clients/asgardia.png"
-                  data-srcset="https://uatkd.ca/img/clients/asgardia.png 1x, https://uatkd.ca/img/clients/asgardia@2x.png 2x"
+                  data-src="https://ualberta-taekwondo-club.github.io/img/clients/asgardia.png"
+                  data-srcset="https://ualberta-taekwondo-club.github.io/img/clients/asgardia.png 1x, https://ualberta-taekwondo-club.github.io/img/clients/asgardia@2x.png 2x"
                   alt="Asgardia" />
               </a>
             </div>
@@ -475,8 +475,8 @@
               <a href="https://radity.com">
                 <img class="lozad img-responsive"
                   src="data:image/gif;base64,R0lGODlhBwACAIAAAP///wAAACH5BAEAAAEALAAAAAAHAAIAAAIDjI9YADs="
-                  data-src="https://uatkd.ca/img/clients/earth-2.png"
-                  data-srcset="https://uatkd.ca/img/clients/earth-2.png 1x, https://uatkd.ca/img/clients/earth-2@2x.png 2x"
+                  data-src="https://ualberta-taekwondo-club.github.io/img/clients/earth-2.png"
+                  data-srcset="https://ualberta-taekwondo-club.github.io/img/clients/earth-2.png 1x, https://ualberta-taekwondo-club.github.io/img/clients/earth-2@2x.png 2x"
                   alt="Earth 2.0" />
               </a>
             </div>
@@ -485,8 +485,8 @@
               <a href="https://radity.com">
                 <img class="lozad img-responsive"
                   src="data:image/gif;base64,R0lGODlhBwACAIAAAP///wAAACH5BAEAAAEALAAAAAAHAAIAAAIDjI9YADs="
-                  data-src="https://uatkd.ca/img/clients/goldline.png"
-                  data-srcset="https://uatkd.ca/img/clients/goldline.png 1x, https://uatkd.ca/img/clients/goldline@2x.png 2x"
+                  data-src="https://ualberta-taekwondo-club.github.io/img/clients/goldline.png"
+                  data-srcset="https://ualberta-taekwondo-club.github.io/img/clients/goldline.png 1x, https://ualberta-taekwondo-club.github.io/img/clients/goldline@2x.png 2x"
                   alt="Goldline" />
               </a>
             </div>
@@ -495,8 +495,8 @@
               <a href="https://radity.com">
                 <img class="lozad img-responsive"
                   src="data:image/gif;base64,R0lGODlhBwACAIAAAP///wAAACH5BAEAAAEALAAAAAAHAAIAAAIDjI9YADs="
-                  data-src="https://uatkd.ca/img/clients/kanba.png"
-                  data-srcset="https://uatkd.ca/img/clients/kanba.png 1x, https://uatkd.ca/img/clients/kanba@2x.png 2x"
+                  data-src="https://ualberta-taekwondo-club.github.io/img/clients/kanba.png"
+                  data-srcset="https://ualberta-taekwondo-club.github.io/img/clients/kanba.png 1x, https://ualberta-taekwondo-club.github.io/img/clients/kanba@2x.png 2x"
                   alt="Kanba" />
               </a>
             </div>
@@ -505,8 +505,8 @@
               <a href="https://radity.com">
                 <img class="lozad img-responsive"
                   src="data:image/gif;base64,R0lGODlhBwACAIAAAP///wAAACH5BAEAAAEALAAAAAAHAAIAAAIDjI9YADs="
-                  data-src="https://uatkd.ca/img/clients/zoo-tv.png"
-                  data-srcset="https://uatkd.ca/img/clients/zoo-tv.png 1x, https://uatkd.ca/img/clients/zoo-tv@2x.png 2x"
+                  data-src="https://ualberta-taekwondo-club.github.io/img/clients/zoo-tv.png"
+                  data-srcset="https://ualberta-taekwondo-club.github.io/img/clients/zoo-tv.png 1x, https://ualberta-taekwondo-club.github.io/img/clients/zoo-tv@2x.png 2x"
                   alt="Zoo" />
               </a>
             </div>
@@ -515,8 +515,8 @@
               <a href="https://radity.com">
                 <img class="lozad img-responsive"
                   src="data:image/gif;base64,R0lGODlhBwACAIAAAP///wAAACH5BAEAAAEALAAAAAAHAAIAAAIDjI9YADs="
-                  data-src="https://uatkd.ca/img/clients/ztos.png"
-                  data-srcset="https://uatkd.ca/img/clients/ztos.png 1x, https://uatkd.ca/img/clients/ztos@2x.png 2x"
+                  data-src="https://ualberta-taekwondo-club.github.io/img/clients/ztos.png"
+                  data-srcset="https://ualberta-taekwondo-club.github.io/img/clients/ztos.png 1x, https://ualberta-taekwondo-club.github.io/img/clients/ztos@2x.png 2x"
                   alt="Ztos" />
               </a>
             </div>
@@ -532,13 +532,14 @@
           <p class="lead">
             We have been receiving a lot of requests for a Finance Kit recently due to the popularity of Fintech.
           </p>
-          <a href="https://uatkd.ca" class="btn btn-primary">Case Study<i class="icon-arrow-right"></i></a>
+          <a href="https://ualberta-taekwondo-club.github.io" class="btn btn-primary">Case Study<i
+              class="icon-arrow-right"></i></a>
         </div>
         <div class="col-12 col-md-7 pl-md-0 text-right">
           <img class='lozad img-responsive img-clip-left-backward'
             src="data:image/gif;base64,R0lGODlhBwACAIAAAP///wAAACH5BAEAAAEALAAAAAAHAAIAAAIDjI9YADs="
-            data-src="https://uatkd.ca/img/works/radity-finance.jpg"
-            data-srcset="https://uatkd.ca/img/works/radity-finance.jpg 1x, https://uatkd.ca/img/works/radity-finance@2x.jpg 2x"
+            data-src="https://ualberta-taekwondo-club.github.io/img/works/radity-finance.jpg"
+            data-srcset="https://ualberta-taekwondo-club.github.io/img/works/radity-finance.jpg 1x, https://ualberta-taekwondo-club.github.io/img/works/radity-finance@2x.jpg 2x"
             alt="Radity Finance - UI Kit" />
         </div>
 
@@ -549,8 +550,8 @@
         <div class="col-12 col-md-7 pl-md-0 text-right">
           <img class='lozad img-responsive img-clip-right-backward'
             src="data:image/gif;base64,R0lGODlhBwACAIAAAP///wAAACH5BAEAAAEALAAAAAAHAAIAAAIDjI9YADs="
-            data-src="https://uatkd.ca/img/works/swissfintech.jpg"
-            data-srcset="https://uatkd.ca/img/works/swissfintech.jpg 1x, https://uatkd.ca/img/works/swissfintech@2x.jpg 2x"
+            data-src="https://ualberta-taekwondo-club.github.io/img/works/swissfintech.jpg"
+            data-srcset="https://ualberta-taekwondo-club.github.io/img/works/swissfintech.jpg 1x, https://ualberta-taekwondo-club.github.io/img/works/swissfintech@2x.jpg 2x"
             alt="Swiss Fintech Website" />
         </div>
         <div class="col-12 col-md-5 mt-4 mt-md-0 my-md-auto">
@@ -558,7 +559,8 @@
           <p class="lead">
             The Swiss Finance &#43; Technology Association is the leading FinTech hub in Switzerland.
           </p>
-          <a href="https://uatkd.ca" class="btn btn-primary">Case Study<i class="icon-arrow-right"></i></a>
+          <a href="https://ualberta-taekwondo-club.github.io" class="btn btn-primary">Case Study<i
+              class="icon-arrow-right"></i></a>
         </div>
 
       </div>
@@ -571,13 +573,14 @@
             Robo Advisor is a Swiss Wealth Manager and wants to create the best digital experience for its UNHW clients
             across the world. We started with a whiteboard.
           </p>
-          <a href="https://uatkd.ca" class="btn btn-primary">Case Study<i class="icon-arrow-right"></i></a>
+          <a href="https://ualberta-taekwondo-club.github.io" class="btn btn-primary">Case Study<i
+              class="icon-arrow-right"></i></a>
         </div>
         <div class="col-12 col-md-7 pl-md-0 text-right">
           <img class='lozad img-responsive img-clip-left-forward'
             src="data:image/gif;base64,R0lGODlhBwACAIAAAP///wAAACH5BAEAAAEALAAAAAAHAAIAAAIDjI9YADs="
-            data-src="https://uatkd.ca/img/works/robo-advisor.jpg"
-            data-srcset="https://uatkd.ca/img/works/robo-advisor.jpg 1x, https://uatkd.ca/img/works/robo-advisor@2x.jpg 2x"
+            data-src="https://ualberta-taekwondo-club.github.io/img/works/robo-advisor.jpg"
+            data-srcset="https://ualberta-taekwondo-club.github.io/img/works/robo-advisor.jpg 1x, https://ualberta-taekwondo-club.github.io/img/works/robo-advisor@2x.jpg 2x"
             alt="Robo Advisor" />
         </div>
 
@@ -604,8 +607,8 @@
           <div class="testimonial__author">
             <img class="lozad testimonial__author-image"
               src="data:image/gif;base64,R0lGODlhBwACAIAAAP///wAAACH5BAEAAAEALAAAAAAHAAIAAAIDjI9YADs="
-              data-src="https://uatkd.ca/img/testimonials/daniel-jordan.jpg"
-              data-srcset="https://uatkd.ca/img/testimonials/daniel-jordan.jpg 1x, https://uatkd.ca/img/testimonials/daniel-jordan@2x.jpg 2x"
+              data-src="https://ualberta-taekwondo-club.github.io/img/testimonials/daniel-jordan.jpg"
+              data-srcset="https://ualberta-taekwondo-club.github.io/img/testimonials/daniel-jordan.jpg 1x, https://ualberta-taekwondo-club.github.io/img/testimonials/daniel-jordan@2x.jpg 2x"
               alt="Daniel Jordan" />
             <div class="testimonial__author-info">
               <h4>Daniel Jordan</h4>
@@ -624,8 +627,8 @@
           <div class="testimonial__author">
             <img class="lozad testimonial__author-image"
               src="data:image/gif;base64,R0lGODlhBwACAIAAAP///wAAACH5BAEAAAEALAAAAAAHAAIAAAIDjI9YADs="
-              data-src="https://uatkd.ca/img/testimonials/jonathan-peters.jpg"
-              data-srcset="https://uatkd.ca/img/testimonials/jonathan-peters.jpg 1x, https://uatkd.ca/img/testimonials/jonathan-peters@2x.jpg 2x"
+              data-src="https://ualberta-taekwondo-club.github.io/img/testimonials/jonathan-peters.jpg"
+              data-srcset="https://ualberta-taekwondo-club.github.io/img/testimonials/jonathan-peters.jpg 1x, https://ualberta-taekwondo-club.github.io/img/testimonials/jonathan-peters@2x.jpg 2x"
               alt="Jonathan Peters" />
             <div class="testimonial__author-info">
               <h4>Jonathan Peters</h4>
@@ -644,8 +647,8 @@
           <div class="testimonial__author">
             <img class="lozad testimonial__author-image"
               src="data:image/gif;base64,R0lGODlhBwACAIAAAP///wAAACH5BAEAAAEALAAAAAAHAAIAAAIDjI9YADs="
-              data-src="https://uatkd.ca/img/testimonials/antonio-willis.jpg"
-              data-srcset="https://uatkd.ca/img/testimonials/antonio-willis.jpg 1x, https://uatkd.ca/img/testimonials/antonio-willis@2x.jpg 2x"
+              data-src="https://ualberta-taekwondo-club.github.io/img/testimonials/antonio-willis.jpg"
+              data-srcset="https://ualberta-taekwondo-club.github.io/img/testimonials/antonio-willis.jpg 1x, https://ualberta-taekwondo-club.github.io/img/testimonials/antonio-willis@2x.jpg 2x"
               alt="Antonio Willis" />
             <div class="testimonial__author-info">
               <h4>Antonio Willis</h4>
@@ -751,29 +754,30 @@
           </li>
 
           <li class="nav-item">
-            <a class="nav-link" href="https://uatkd.ca">ABOUT</a>
+            <a class="nav-link" href="https://ualberta-taekwondo-club.github.io">ABOUT</a>
           </li>
 
           <li class="nav-item">
-            <a class="nav-link" href="https://uatkd.ca">PORTFOLIO</a>
+            <a class="nav-link" href="https://ualberta-taekwondo-club.github.io">PORTFOLIO</a>
           </li>
 
           <li class="nav-item">
-            <a class="nav-link" href="https://uatkd.ca">CONTACT</a>
+            <a class="nav-link" href="https://ualberta-taekwondo-club.github.io">CONTACT</a>
           </li>
 
         </ul>
       </div>
       <div class="footer__right">
-        <a href="https://radity.com/"><img src="https://uatkd.ca/img/general/design-and-code-radity.png"
-            srcset="https://uatkd.ca/img/general/design-and-code-radity.png 1x, https://uatkd.ca/img/general/design-and-code-radity@2x.png 2x"
+        <a href="https://radity.com/"><img
+            src="https://ualberta-taekwondo-club.github.io/img/general/design-and-code-radity.png"
+            srcset="https://ualberta-taekwondo-club.github.io/img/general/design-and-code-radity.png 1x, https://ualberta-taekwondo-club.github.io/img/general/design-and-code-radity@2x.png 2x"
             alt="Design &amp; Code - Radity" /></a>
       </div>
     </div>
   </footer>
 
-  <script src='https://uatkd.ca/js/rad-animations.js'></script>
-  <script src='https://uatkd.ca/js/library/lozad.min.js'></script>
+  <script src='https://ualberta-taekwondo-club.github.io/js/rad-animations.js'></script>
+  <script src='https://ualberta-taekwondo-club.github.io/js/library/lozad.min.js'></script>
   <script>
     window.addEventListener("load", function () {
       var observer = window.lozad(".lozad", {
@@ -783,11 +787,11 @@
       observer.observe();
     });
   </script>
-  <script src='https://uatkd.ca/js/library/jquery-3.3.1.slim.min.js'></script>
-  <script src='https://uatkd.ca/js/library/bootstrap.min.js'></script>
-  <script src='https://uatkd.ca/js/sticky-header.js'></script>
-  <script src='https://uatkd.ca/js/library/smooth-scroll.polyfills.min.js'></script>
-  <script src='https://uatkd.ca/js/library/fontfaceobserver.js'></script>
+  <script src='https://ualberta-taekwondo-club.github.io/js/library/jquery-3.3.1.slim.min.js'></script>
+  <script src='https://ualberta-taekwondo-club.github.io/js/library/bootstrap.min.js'></script>
+  <script src='https://ualberta-taekwondo-club.github.io/js/sticky-header.js'></script>
+  <script src='https://ualberta-taekwondo-club.github.io/js/library/smooth-scroll.polyfills.min.js'></script>
+  <script src='https://ualberta-taekwondo-club.github.io/js/library/fontfaceobserver.js'></script>
   <script>
     (function (w) {
 
